--- a/Web_Front/WebContent/jquery_prac/Traversing/3.jQuery_filter2.html
+++ b/Web_Front/WebContent/jquery_prac/Traversing/3.jQuery_filter2.html
@@ -48,27 +48,31 @@
     <input type="button" value="[A]색 변경" onclick="click3();" />
     <input type="button" value="[B]색 변경" onclick="click4();" />
     <script>
-        click1 = function () {
+
+        const clear = function(){
             $("td").css("color", "black");
+        }
+        click1 = function () {
             // $("td:eq(1)").css("color", "red");
             // $("td:eq(2)").css("color", "red");
+
+            // $("td").css("color", "black");
+            clear();
             $("tr").eq(1).children("td").not(":first-child").css("color", "red");
         }
 
         var click2 = () => {
-            $("td").css("color", "black");
-            // $("td:eq(4)").css("color", "red");
-            // $("td:eq(5)").css("color", "red");
+            clear();
             $("tr:eq(2)").children("td").not(":first-child").css("color", "red");
         }
 
         function click3(){
-            $("td").css("color", "black");
+            clear();
             $("td:nth-child(2)").css("color", "red");
         }
 
         function click4(){
-            $("td").css("color", "black");
+            clear();
             $("td:nth-child(3)").css("color", "red");
         }
     </script>
