--- a/Web_Front/WebContent/jquery_prac/Manipulation/4.jQuery_eachTable.html
+++ b/Web_Front/WebContent/jquery_prac/Manipulation/4.jQuery_eachTable.html
@@ -22,7 +22,23 @@
 <body>
     <script>
         $(function () {
-
+            $("#btn").on("click", function () {
+                var trTags = $("tr");
+                var result = "";
+                trTags.each(function (index, item) {
+                    if (index > 0) {
+                        var tdTags = $(item).children();
+                        var input = tdTags.eq(0).children();
+                        if(input.is(":checked")){
+                            result += tdTags.eq(1).text() 
+                                    + ", " + tdTags.eq(2).text() 
+                                    + ", " + tdTags.eq(3).text() 
+                                    + "<br>";
+                        }
+                    }
+                });
+                $("#result").html(result);
+            });
         });
     </script>
     <table>
