4차 시험 준비

--- a/Web_Front/WebContent/day04/html_css/4.navigator_layout.html
+++ b/Web_Front/WebContent/day04/html_css/4.navigator_layout.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>navigator 레이아웃</title>
-    <link rel="stylesheet" href="../day04_css/navigatorlayout.css">
+    <link rel="stylesheet" href="../../day04_css/navigatorlayout.css">
 </head>
 
 <body>
