--- a/Web_Front/WebContent/day08_prac/13.JS_tableAdd.html
+++ b/Web_Front/WebContent/day08_prac/13.JS_tableAdd.html
@@ -126,6 +126,7 @@
             } else if (gender[1].checked) {
                 gender = "여";
             }
+            // console.log(gender);
 
             // hobby(체크박스)는 여러개 체크된 경우까지 생각해야함
             var hobby = document.querySelectorAll("[name=hobby]");
