--- a/Web_Front/WebContent/jquery_prac/Manipulation/2.jQuery_eachTable.html
+++ b/Web_Front/WebContent/jquery_prac/Manipulation/2.jQuery_eachTable.html
@@ -63,7 +63,7 @@
                 var names = $("td").filter(function(index){
                     return index % 3 == 0;
                 });
-                // console.log(names);
+                console.log(names);
                 names.addClass("name");
 
                 // age
