--- a/Web_Front/WebContent/day04/html_css/1.2dan_layout.html
+++ b/Web_Front/WebContent/day04/html_css/1.2dan_layout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1. 2단 레이아웃</title>
-    <link rel="stylesheet" href="../day04_css/2danlayout.css">
+    <link rel="stylesheet" href="../../day04_css/2danlayout.css">
 </head>
 <body>
     <div id="container">
