--- a/Web_Front/WebContent/day04/html_css/2.3dan_layout.html
+++ b/Web_Front/WebContent/day04/html_css/2.3dan_layout.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2. 3단 레이아웃</title>
-    <link rel="stylesheet" href="../day04_css/3danlayout.css">
-    <link rel="stylesheet" href="../day04_css/reset.css">
+    <link rel="stylesheet" href="../../day04_css/3danlayout.css">
+    <link rel="stylesheet" href="../../day04_css/reset.css">
 </head>
 
 <body>
