--- a/Web_Front/WebContent/day04/html_css/3.header_layout.html
+++ b/Web_Front/WebContent/day04/html_css/3.header_layout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>헤더 레이아웃</title>
-    <link rel="stylesheet" href="../day04_css/headerlayout.css">
+    <link rel="stylesheet" href="../../day04_css/headerlayout.css">
 </head>
 <body>
     <h1>3. header layout 만들어보기</h1>
