--- a/Web_Front/WebContent/day04/html_css/nav.html
+++ b/Web_Front/WebContent/day04/html_css/nav.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>네비게이션 연습</title>
-    <link rel="stylesheet" href="../day04_css/nav.css">
+    <link rel="stylesheet" href="../../day04_css/nav.css">
 </head>
 <body>
     <div>
